# AstroVar

./: LICENSE.txt  README.md  README.rst  pyproject.toml
src/AstroVar/: AstroVar.py  __init__.py
src/AstroVar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorial/: 1 - Pre-detrending.ipynb  2 - Iterative Detrending.ipynb  3 - Selection of Modes.ipynb  Style.mplstyle  TESS_Var.py
tutorial/Example Data/: Periods.csv  Pre_detrended.npz
