[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AstroVar"
version = "0.0.1"
authors = [
  { name="Tom Ihro", email="tom.ihro@gmail.com" },
]
description = "This packages is used to detrend and find the Variability in photometric lightcurves "
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [ 
  "numpy>=1.21",
  "pyastronomy>=0.17.1",
  "astropy>=5.0.0",
  "matplotlib >= 3.5.1",

]
[project.urls]
"Homepage" = "https://github.com/Meistermagier/AstroVar"
"Bug Tracker" = "https://github.com/Meistermagier/AstroVar/issues"